@@ -15,6 +15,8 @@ package org.eclipse.core.internal.resources;
 
 import java.io.IOException;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
+
 import org.eclipse.core.internal.boot.PlatformURLConnection;
 import org.eclipse.core.internal.boot.PlatformURLHandler;
 import org.eclipse.core.internal.utils.Messages;
@@ -46,7 +48,7 @@ public class PlatformURLResourceConnection extends PlatformURLConnection {
 	@Override
 	protected URL resolve() throws IOException {
 		String filePath = url.getFile().trim();
-		filePath = URLDecoder.decode(filePath, "UTF-8"); //$NON-NLS-1$
+		filePath = URLDecoder.decode(filePath, StandardCharsets.UTF_8); //$NON-NLS-1$
 		IPath spec = new Path(filePath).makeRelative();
 		if (!spec.segment(0).equals(RESOURCE))
 			throw new IOException(NLS.bind(Messages.url_badVariant, url));
